Additional PDF Automatic Renamer

--- a/App.config
+++ b/App.config
@@ -21,6 +21,22 @@
         <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="UglyToad.PdfPig.Tokens" publicKeyToken="605d367334e74123" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.1.8.0" newVersion="0.1.8.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="UglyToad.PdfPig.Core" publicKeyToken="605d367334e74123" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.1.8.0" newVersion="0.1.8.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="UglyToad.PdfPig.Fonts" publicKeyToken="605d367334e74123" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.1.8.0" newVersion="0.1.8.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="UglyToad.PdfPig.Tokenization" publicKeyToken="605d367334e74123" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.1.8.0" newVersion="0.1.8.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
