--- a/packages.config
+++ b/packages.config
@@ -17,4 +17,10 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net48" />
   <package id="System.Shim" version="1.0.0.1" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
+  <package id="UglyToad.PdfPig" version="1.7.0-custom-5" targetFramework="net48" />
+  <package id="UglyToad.PdfPig.Core" version="1.7.0-custom-5" targetFramework="net48" />
+  <package id="UglyToad.PdfPig.Fonts" version="1.7.0-custom-5" targetFramework="net48" />
+  <package id="UglyToad.PdfPig.Tokenization" version="1.7.0-custom-5" targetFramework="net48" />
+  <package id="UglyToad.PdfPig.Tokens" version="1.7.0-custom-5" targetFramework="net48" />
 </packages>
